# CerboEnergy

./: .clang-format  .gitignore  README.md  imgui.ini
src/: CMakeLists.txt  main.cpp  mainConfig.h  mainConfig.h.in
src/include/: cerboGui.h  cerboLogger.h  cerboModbus.h  cerboPlots.h  cerboSSH.h  dataHandler.h  dataTypes.h  helperFunctions.h  main.h  vrmApi.h
